# TPTD

./: .gitignore  CMakeLists.txt  LICENSE  MultipleShooting.cpp  Parareal.cpp  compile_commands.json  main.cpp
