cmake_minimum_required(VERSION 3.10)
project(HelloTBB)
set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_STANDARD_REQUIRED True)
set(CMAKE_CXX_EXTENSIONS OFF)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wextra -Wpedantic")
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -O3 -march=native")

set(CMAKE_EXPORT_COMPILE_COMMANDS ON)

find_package(TBB REQUIRED)
find_package(Threads REQUIRED)
find_package(MKL REQUIRED PATHS $ENV{MKLROOT})
add_executable(HelloTBB HelloTBB.cpp)
target_include_directories(HelloTBB PUBLIC ${TBB_INCLUDE_DIRS} ${MKL_INCLUDE_DIRS})
target_link_libraries(HelloTBB TBB::tbb Threads::Threads MKL::MKL)
